--- a/src/components/CardItem/CardItem.css
+++ b/src/components/CardItem/CardItem.css
@@ -5,18 +5,21 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 20px;
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
+  background-color: white;
 }
 
 .card__image {
-  margin-bottom: 30px;
+  padding: 20px 0;
+  margin-bottom: 15px;
   width: 360px;
   height: 200px;
+  background-color: white;
+  object-fit: contain;
 }
 
 .card__title {
-  max-width: 224px;
+  max-width: 270px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
@@ -43,7 +46,8 @@
   height: 30px;
   border-radius: 30px;
   border: none;
-  color: #FFF;
+  background-color: gray;
+  border: 2px solid #404040;
   font-size: 12px;
   font-weight: 400;
   line-height: 11px;
@@ -51,6 +55,7 @@
   padding: 0;
   transition: .1s linear;
   cursor: pointer;
+
 }
 
 .card__add-button:hover {
@@ -59,6 +64,6 @@
 
 
 .card__add-icon {
-  width: 30px;
-  height: 30px;
+  width: 23px;
+  height: 23px;
 }
