--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,9 +1,25 @@
 .footer {
-  width: 1140px;
-  height: 50px;
-  padding: 50px 0;
+
+}
+
+.footer__container {
+  max-width: 1140px;
+  height: 70px;
   margin: 0 auto;
-  border: 1px solid red;
+  padding: 30px 0;
+  border-top: 2px solid gray;
   display: flex;
   justify-content: space-between;
 }
+
+
+.footer__github-link {
+  text-decoration: none;
+  color: black;
+  transition: .1s linear;
+}
+
+.footer__github-link:hover {
+  opacity: .8;
+}
+
