--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -1,6 +1,13 @@
 .cart {
   width: 1140px;
-  min-height: 400px;
-  border: 1px solid red;
   margin: 0 auto;
+}
+
+.cart__card-container {
+  min-height: 300px;
+}
+
+.cart__no-items-title {
+  margin: 150px 0 0;
+  text-align: center;
 }
