--- a/src/components/Catalog/Catalog.css
+++ b/src/components/Catalog/Catalog.css
@@ -1,6 +1,6 @@
 .catalog {
   width: 1140px;
-  min-height: 400px;
+  min-height: 300px;
   margin: 0 auto;
   padding: 70px 0;
   display: grid;
@@ -8,6 +8,7 @@
   gap: 30px;
 }
 
-.catalog__no-cards-title {
+.catalog__no-items-title {
   order: 2;
+  text-align: center;
 }
