--- a/src/components/Catalog/ItemComponent/ItemComponent.css
+++ b/src/components/Catalog/ItemComponent/ItemComponent.css
@@ -1,4 +1,4 @@
-.card {
+.item {
   width: 360px;
   height: 360px;
   border-radius: 6px;
@@ -7,9 +7,10 @@
   align-items: center;
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
   background-color: white;
+  order: 1;
 }
 
-.card__image {
+.item__image {
   padding: 20px 0;
   margin-bottom: 15px;
   width: 360px;
@@ -18,7 +19,7 @@
   object-fit: contain;
 }
 
-.card__title {
+.item__title {
   max-width: 270px;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -30,7 +31,7 @@
   padding: 0;
 }
 
-.card__price {
+.item__price {
   max-width: 224px;
   white-space: nowrap;
   overflow: hidden;
@@ -41,13 +42,14 @@
   padding: 0;
 }
 
-.card__add-button {
+.item__add-button {
   width: 100px;
   height: 30px;
   border-radius: 30px;
   border: none;
-  background-color: gray;
-  border: 2px solid #404040;
+  background-color: #ff6900;
+  color: #FFF;
+  border: 2px solid #c95400;
   font-size: 12px;
   font-weight: 400;
   line-height: 11px;
@@ -55,15 +57,25 @@
   padding: 0;
   transition: .1s linear;
   cursor: pointer;
-
 }
 
-.card__add-button:hover {
+.item__add-button:hover {
   opacity: .8;
 }
 
-
-.card__add-icon {
-  width: 23px;
-  height: 23px;
+.item__add-button_added {
+  width: 100px;
+  height: 30px;
+  border-radius: 30px;
+  border: none;
+  background-color: #3d3d3d;
+  color: #FFF;
+  border: 2px solid #3d3d3d;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 11px;
+  margin: 18px auto 0;
+  padding: 0;
+  transition: .1s linear;
+  cursor: pointer;
 }
