--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -1,13 +1,14 @@
 .cart {
-  width: 1140px;
+  margin: 60px auto 130px;
+}
+
+.cart__items-container {
   margin: 0 auto;
-}
-
-.cart__card-container {
-  min-height: 300px;
-}
-
-.cart__no-items-title {
-  margin: 150px 0 0;
-  text-align: center;
+  width: 1244px;
+  min-height: 490px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+  flex-direction: column;
 }
