--- a/src/components/Catalog/ItemComponent/ItemComponent.css
+++ b/src/components/Catalog/ItemComponent/ItemComponent.css
@@ -1,7 +1,7 @@
 .item {
-  width: 360px;
-  height: 360px;
-  border-radius: 6px;
+  width: 400px;
+  height: 400px;
+  border-radius: 5px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -11,50 +11,57 @@
 }
 
 .item__image {
-  padding: 20px 0;
-  margin-bottom: 15px;
-  width: 360px;
-  height: 200px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  width: 401px;
+  height: 233px;
   background-color: white;
   object-fit: contain;
 }
 
+.item__data-container {
+  display: flex;
+  flex-direction: column;
+
+  width: 360px;
+}
+
 .item__title {
-  max-width: 270px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  font-size: 15px;
-  font-weight: 500;
-  line-height: 18px;
-  margin: 0 0 5px;
+  color: #494949;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin: 0;
   padding: 0;
 }
 
 .item__price {
-  max-width: 224px;
-  white-space: nowrap;
-  overflow: hidden;
-  font-size: 15px;
-  font-weight: 500;
-  line-height: 18px;
+  color: #292929;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
   margin: 0;
   padding: 0;
 }
 
 .item__add-button {
-  width: 100px;
-  height: 30px;
-  border-radius: 30px;
-  border: none;
-  background-color: #ff6900;
-  color: #FFF;
-  border: 2px solid #c95400;
-  font-size: 12px;
-  font-weight: 400;
-  line-height: 11px;
-  margin: 18px auto 0;
+  background-color: #292929;
+  margin: 5px 0 0;
   padding: 0;
+  border: none;
+  border-radius: 5px;
+  width: 400px;
+  height: 50px;
+  color: #FFF;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
   transition: .1s linear;
   cursor: pointer;
 }
@@ -64,18 +71,18 @@
 }
 
 .item__add-button_added {
-  width: 100px;
-  height: 30px;
-  border-radius: 30px;
-  border: none;
-  background-color: #3d3d3d;
-  color: #FFF;
-  border: 2px solid #3d3d3d;
-  font-size: 12px;
-  font-weight: 400;
-  line-height: 11px;
-  margin: 18px auto 0;
+  background-color: #FF3737;
+  margin: 5px 0 0;
   padding: 0;
+  border: none;
+  border-radius: 5px;
+  width: 400px;
+  height: 50px;
+  color: #FFF;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
   transition: .1s linear;
   cursor: pointer;
 }
