--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,23 +1,26 @@
 .header {
-/*  styles for header */
+  background-color: #292929;
 }
 
 .header__container {
   max-width: 1140px;
-  height: 70px;
+  height: 78px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 2px solid gray;
   margin: 0 auto;
 }
 
 
 .header__logo {
-  width: 32px;
-  height: 32px;
+  width: 181px;
+  height: 36px;
   text-decoration: none;
   color: black;
   margin: 0;
   padding: 0;
+}
+
+.header__logo {
+
 }
