--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -4,18 +4,52 @@
 }
 
 .navigation__link {
+  color: #FFF;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
   text-decoration: none;
-  color: black;
   transition: .1s linear;
 }
 
 .navigation__link_active {
+  color: #FFF;
+  font-size: 24px;
+  font-style: normal;
   text-decoration: none;
-  color: black;
-  transition: .1s linear;
-  font-weight: 700;
+  font-weight: 500;
+  cursor: default;
 }
 
 .navigation__link:hover {
-  opacity: .8;
+  opacity: .7;
+}
+
+.navigation__basket-link {
+  text-decoration: 0;
+  color: #FFF;
+  position: relative;
+  width: 34px;
+  height: 34px;
+}
+
+.navigation__basket {
+  width: 34px;
+  height: 34px;
+}
+
+.navigation__items-quantity {
+  position: absolute;
+  right: 0;
+  top: 0;
+  display: block;
+  text-align: center;
+  border-radius: 50px;
+  width: 15px;
+  height: 15px;
+  font-size: 10px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  background-color: #FF4747;
 }
