--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
+@import url(./vendor/Inter/inter.css);
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: "Inter", -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -8,7 +10,7 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
 
@@ -16,6 +18,7 @@ code {
 @import url(./components/Navigation/Navigation.css);
 @import url(./components/Catalog/Catalog.css);
 @import url(./components/Cart/Cart.css);
+@import url(./components/EmptyContainer/EmptyContainer.css);
 @import url(./components/Catalog/ItemComponent/ItemComponent.css);
-@import url(./components/Cart/ChosenItem/ChosenItem.css);
+@import url(./components/Cart/ChosenItemComponent/ChosenItemComponent.css);
 @import url(./components/Footer/Footer.css);
