--- a/src/components/Catalog/ItemComponent/ItemComponent.css
+++ b/src/components/Catalog/ItemComponent/ItemComponent.css
@@ -54,7 +54,7 @@
   margin: 5px 0 0;
   padding: 0;
   border: none;
-  border-radius: 5px;
+  border-radius: 0 0 5px 5px;
   width: 400px;
   height: 50px;
   color: #FFF;
@@ -75,7 +75,7 @@
   margin: 5px 0 0;
   padding: 0;
   border: none;
-  border-radius: 5px;
+  border-radius: 0 0 5px 5px;
   width: 400px;
   height: 50px;
   color: #FFF;
